[package]
name = "tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0"
crossterm = "0"
csv = "1"
regex = "1"
# tui-logger = "0"
# log = "0"
# tokio = {version = "1", features = ["full"]}
# eyre = "0"