[package]
name = "tui-csv-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tui = "0.19.0"
crossterm = "0.25.0"
csv = "1"
regex = "1"
tui-textarea = { git = "https://github.com/rhysd/tui-textarea.git"}
anyhow = "1.0"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1